--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ActivityLogIn"
-    android:background="@color/ssBlack"
+    android:background="#32236E"
     >
 
     <View
@@ -16,23 +16,88 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@mipmap/ic_log_in_background"
+
         />
 
-    <TextView
+    <ImageView
         android:id="@+id/log_in_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="32dp"
-        android:text="@string/app_title"
+        android:layout_marginTop="50dp"
+        android:src="@mipmap/ic_log_in_bear"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:textColor="#fff"
+        android:textColor="@color/ssBlack"
+        app:layout_constraintDimensionRatio="1:1"
+        android:scaleType="fitCenter"
+        android:background="#32236E"
         />
 
+    <TextView
+        android:id="@+id/log_in_email_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/log_in_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/log_in_email_input"
+        android:layout_marginTop="60dp"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:textColor="@color/ssWhite"
+        android:text="Email"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintVertical_bias="0"
+        />
+
+    <EditText
+        android:id="@+id/log_in_email_input"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintTop_toBottomOf="@id/log_in_email_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/log_in_password_text"
+        android:inputType="textEmailAddress"
+        android:hint="Email"
+        android:textColorHint="@color/ssWhite"
+        android:textColor="@color/ssWhite"
+        />
+
+    <TextView
+        android:id="@+id/log_in_password_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/log_in_email_input"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/log_in_password_input"
+        android:layout_marginTop="24dp"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:textColor="@color/ssWhite"
+        android:text="Password"
+        />
+
+    <EditText
+        android:id="@+id/log_in_password_input"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/log_in_password_text"
+        app:layout_constraintStart_toStartOf="@id/log_in_email_input"
+        app:layout_constraintEnd_toEndOf="@id/log_in_email_input"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:hint="password"
+        android:textColor="@color/ssWhite"
+        android:textColorHint="@color/ssWhite"
+        android:inputType="textPassword"
+        />
 
 
 </android.support.constraint.ConstraintLayout>
