--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -71,6 +71,18 @@
         android:background="@drawable/white_border"
         />
 
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/log_in_email_check"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/log_in_email_input"
+        app:layout_constraintBottom_toBottomOf="@+id/log_in_email_input"
+        app:layout_constraintEnd_toEndOf="@+id/log_in_email_input"
+        android:layout_marginEnd="10dp"
+        android:src="@drawable/ic_baseline_check_circle_24px"
+        android:tint="#0CF032"
+        />
+
     <TextView
         android:id="@+id/log_in_password_text"
         android:layout_width="wrap_content"
@@ -98,6 +110,18 @@
         android:textColorHint="@color/ssWhite"
         android:inputType="textPassword"
         android:background="@drawable/white_border"
+        />
+
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/log_in_password_check"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/log_in_password_input"
+        app:layout_constraintBottom_toBottomOf="@+id/log_in_password_input"
+        app:layout_constraintEnd_toEndOf="@+id/log_in_password_input"
+        android:layout_marginEnd="10dp"
+        android:src="@drawable/ic_baseline_check_circle_24px"
+        android:tint="@color/ssWhite"
         />
 
     <Button
