--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -81,6 +81,7 @@
         android:layout_marginEnd="10dp"
         android:src="@drawable/ic_baseline_check_circle_24px"
         android:tint="#0CF032"
+        android:visibility="invisible"
         />
 
     <TextView
@@ -122,9 +123,11 @@
         android:layout_marginEnd="10dp"
         android:src="@drawable/ic_baseline_check_circle_24px"
         android:tint="@color/ssWhite"
+        android:visibility="invisible"
         />
 
     <Button
+        android:id="@+id/log_in_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/log_in_password_input"
