--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -5,19 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ActivityLogIn"
-    android:background="#2F2929"
+    android:background="#04090f"
     >
-
-    <View
-        android:id="@+id/log_in_view"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-
-        />
 
     <ImageView
         android:id="@+id/log_in_title"
@@ -33,7 +22,7 @@
         android:textColor="@color/ssBlack"
         app:layout_constraintDimensionRatio="1:1"
         android:scaleType="fitCenter"
-        android:background="#2F2929"
+        android:background="#04090f"
         />
 
     <TextView
@@ -46,7 +35,6 @@
         app:layout_constraintBottom_toTopOf="@id/log_in_email_input"
         android:layout_marginTop="60dp"
         android:textSize="30sp"
-        android:textStyle="bold"
         android:textColor="@color/ssWhite"
         android:text="Email"
         app:layout_constraintVertical_chainStyle="packed"
@@ -60,29 +48,32 @@
         android:layout_marginTop="10dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:padding="6dp"
         app:layout_constraintTop_toBottomOf="@id/log_in_email_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/log_in_password_text"
         android:inputType="textEmailAddress"
         android:hint="Email"
-        android:textColorHint="@color/ssWhite"
-        android:textColor="@color/ssWhite"
+        android:textAlignment="center"
+        android:textColorHint="@color/ssBlack"
+        android:textColor="@color/ssBlack"
         android:background="@drawable/white_border"
         />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/log_in_email_check"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@+id/log_in_email_input"
-        app:layout_constraintBottom_toBottomOf="@+id/log_in_email_input"
-        app:layout_constraintEnd_toEndOf="@+id/log_in_email_input"
+        android:layout_height="0dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
         android:src="@drawable/ic_baseline_check_circle_24px"
         android:tint="#0CF032"
         android:visibility="invisible"
-        />
+        app:layout_constraintBottom_toBottomOf="@+id/log_in_email_input"
+        app:layout_constraintEnd_toEndOf="@+id/log_in_email_input"
+        app:layout_constraintTop_toTopOf="@+id/log_in_email_input" />
 
     <TextView
         android:id="@+id/log_in_password_text"
@@ -94,7 +85,6 @@
         app:layout_constraintBottom_toTopOf="@+id/log_in_password_input"
         android:layout_marginTop="24dp"
         android:textSize="30sp"
-        android:textStyle="bold"
         android:textColor="@color/ssWhite"
         android:text="Password"
         />
@@ -106,9 +96,14 @@
         app:layout_constraintTop_toBottomOf="@id/log_in_password_text"
         app:layout_constraintStart_toStartOf="@id/log_in_email_input"
         app:layout_constraintEnd_toEndOf="@id/log_in_email_input"
+        app:layout_constraintBottom_toTopOf="@+id/log_in_button"
+        android:layout_marginTop="10dp"
+        android:padding="6dp"
         android:hint="password"
-        android:textColor="@color/ssWhite"
-        android:textColorHint="@color/ssWhite"
+        android:shadowColor="@color/ssBlack"
+        android:textColor="@color/ssBlack"
+        android:textAlignment="center"
+        android:textColorHint="@color/ssBlack"
         android:inputType="textPassword"
         android:background="@drawable/white_border"
         />
@@ -116,14 +111,31 @@
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/log_in_password_check"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="@+id/log_in_password_input"
         app:layout_constraintBottom_toBottomOf="@+id/log_in_password_input"
         app:layout_constraintEnd_toEndOf="@+id/log_in_password_input"
         android:layout_marginEnd="10dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
         android:src="@drawable/ic_baseline_check_circle_24px"
         android:visibility="invisible"
         android:tint="#0CF032"
+        />
+
+    <ProgressBar
+        android:id="@+id/log_in_button_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/log_in_button"
+        app:layout_constraintBottom_toBottomOf="@+id/log_in_button"
+        app:layout_constraintStart_toStartOf="@+id/log_in_button"
+        app:layout_constraintEnd_toEndOf="@+id/log_in_button"
+        android:visibility="invisible"
+        android:backgroundTint="#a8834f"
+        android:indeterminate="true"
+        android:indeterminateTintMode="src_atop"
+        android:indeterminateTint="#a8834f"
         />
 
     <Button
@@ -134,7 +146,9 @@
         app:layout_constraintStart_toStartOf="@id/log_in_password_input"
         app:layout_constraintEnd_toEndOf="@id/log_in_password_input"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="50dp"
         android:background="@drawable/white_border"
+        android:backgroundTint="#a8834f"
         android:text="Log In"
         android:textColor="@color/ssWhite"
         android:textSize="18sp"
