--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActivityLogIn"
+    tools:context=".ActivitySignUp"
     android:background="#04090f"
     >
 
@@ -23,6 +23,7 @@
         app:layout_constraintDimensionRatio="1:1"
         android:scaleType="fitCenter"
         android:background="#04090f"
+        android:contentDescription="@string/app_name"
         />
 
     <TextView
@@ -36,7 +37,7 @@
         android:layout_marginTop="60dp"
         android:textSize="30sp"
         android:textColor="@color/ssWhite"
-        android:text="Email"
+        android:text="@string/email"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintVertical_bias="0"
         />
@@ -54,11 +55,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/log_in_password_text"
         android:inputType="textEmailAddress"
-        android:hint="Email"
+        android:hint="@string/email"
         android:textAlignment="center"
         android:textColorHint="@color/ssBlack"
         android:textColor="@color/ssBlack"
         android:background="@drawable/white_border"
+        android:autofillHints=""
+        tools:targetApi="o"
         />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -86,7 +89,7 @@
         android:layout_marginTop="24dp"
         android:textSize="30sp"
         android:textColor="@color/ssWhite"
-        android:text="Password"
+        android:text="@string/password"
         />
 
     <EditText
@@ -99,14 +102,15 @@
         app:layout_constraintBottom_toTopOf="@+id/log_in_button"
         android:layout_marginTop="10dp"
         android:padding="6dp"
-        android:hint="password"
+        android:hint="@string/password"
         android:shadowColor="@color/ssBlack"
         android:textColor="@color/ssBlack"
         android:textAlignment="center"
         android:textColorHint="@color/ssBlack"
         android:inputType="textPassword"
         android:background="@drawable/white_border"
-        />
+        android:autofillHints=""
+        tools:targetApi="o" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/log_in_password_check"
@@ -149,7 +153,7 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/white_border"
         android:backgroundTint="#a8834f"
-        android:text="Log In"
+        android:text="@string/sign_up"
         android:textColor="@color/ssWhite"
         android:textSize="18sp"
         android:textAllCaps="false"
