putting colours in values

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ActivitySignUp"
-    android:background="#04090f"
+    android:background="@color/ssBackgroundBlack"
     >
 
     <ImageView
@@ -19,7 +19,7 @@
         android:src="@mipmap/ic_log_in_bear"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:textColor="@color/ssBlack"
+        android:textColor="@color/ssBackgroundBlack"
         app:layout_constraintDimensionRatio="1:1"
         android:scaleType="fitCenter"
         android:background="#04090f"
@@ -57,8 +57,8 @@
         android:inputType="textEmailAddress"
         android:hint="@string/email"
         android:textAlignment="center"
-        android:textColorHint="@color/ssBlack"
-        android:textColor="@color/ssBlack"
+        android:textColorHint="@color/ssBackgroundBlack"
+        android:textColor="@color/ssBackgroundBlack"
         android:background="@drawable/white_border"
         android:autofillHints=""
         tools:targetApi="o"
@@ -72,7 +72,7 @@
         android:layout_marginTop="2dp"
         android:layout_marginBottom="2dp"
         android:src="@drawable/ic_baseline_check_circle_24px"
-        android:tint="#0CF032"
+        android:tint="@color/ssGreen"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/log_in_email_input"
         app:layout_constraintEnd_toEndOf="@+id/log_in_email_input"
@@ -106,7 +106,7 @@
         android:shadowColor="@color/ssBlack"
         android:textColor="@color/ssBlack"
         android:textAlignment="center"
-        android:textColorHint="@color/ssBlack"
+        android:textColorHint="@color/ssBackgroundBlack"
         android:inputType="textPassword"
         android:background="@drawable/white_border"
         android:autofillHints=""
