--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -27,10 +27,23 @@
         />
 
     <TextView
-        android:id="@+id/log_in_email_title"
+        android:id="@+id/log_in_heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/log_in_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/sign_up"
+        android:textSize="30sp"
+        android:textColor="@color/ssWhite"
+        android:textStyle="bold"
+        />
+
+    <TextView
+        android:id="@+id/log_in_email_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/log_in_heading"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/log_in_email_input"
