--- a/app/src/main/res/layout/activity_start_states.xml
+++ b/app/src/main/res/layout/activity_start_states.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".ActivityStartStates">
 
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Let gets your details"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
