--- a/app/src/main/res/layout/activity_start_states.xml
+++ b/app/src/main/res/layout/activity_start_states.xml
@@ -4,15 +4,203 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActivityStartStates">
+    tools:context=".ActivityStartStates"
+    android:background="@color/ssBackgroundBlack"
+    >
 
-    <TextView
+    <ImageView
+        android:id="@+id/start_states_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="50dp"
+        android:src="@mipmap/ic_log_in_bear"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintDimensionRatio="1:1"
+        android:scaleType="fitCenter"
+        android:background="@color/ssBackgroundBlack"
+        android:contentDescription="@string/app_name"
+        />
+
+    <TextView
+        android:id="@+id/start_states_heading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/start_states_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:text="Let gets your details"
+        android:textColor="@color/ssWhite"
+        android:textSize="30sp"
+        />
+
+    <TextView
+        android:id="@+id/start_states_bench_press_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/start_states_heading"
+        app:layout_constraintStart_toStartOf="@+id/start_states_heading"
+        app:layout_constraintEnd_toEndOf="@+id/start_states_heading"
+        app:layout_constraintHorizontal_bias="0"
+        android:layout_marginTop="20dp"
+        android:text="Bench press (kg)"
+        android:textColor="@color/ssWhite"
+        android:textSize="20sp"
+        />
+    <EditText
+        android:id="@+id/start_states_bench_press_input"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/start_states_bench_press_label"
+        app:layout_constraintStart_toStartOf="@+id/start_states_heading"
+        app:layout_constraintEnd_toEndOf="@+id/start_states_heading"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/white_border"
+        android:hint="Bench press"
+        android:shadowColor="@color/ssBlack"
+        android:textColor="@color/ssBlack"
+        android:textAlignment="textStart"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        android:inputType="numberDecimal"
+        />
+
+    <TextView
+        android:id="@+id/start_states_squat_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/start_states_bench_press_input"
+        app:layout_constraintStart_toStartOf="@id/start_states_heading"
+        app:layout_constraintEnd_toEndOf="@id/start_states_heading"
+        app:layout_constraintHorizontal_bias="0"
+        android:layout_marginTop="20dp"
+        android:text="Squat (kg)"
+        android:textColor="@color/ssWhite"
+        android:textSize="20sp"
+        />
+
+    <EditText
+        android:id="@+id/start_states_squat_input"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/start_states_squat_label"
+        app:layout_constraintStart_toStartOf="@+id/start_states_heading"
+        app:layout_constraintEnd_toEndOf="@+id/start_states_heading"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/white_border"
+        android:hint="Squat"
+        android:shadowColor="@color/ssBlack"
+        android:textColor="@color/ssBlack"
+        android:textAlignment="textStart"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        android:inputType="numberDecimal"
+        />
+
+    <TextView
+        android:id="@+id/start_states_deadlift_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/start_states_squat_input"
+        app:layout_constraintStart_toStartOf="@id/start_states_heading"
+        app:layout_constraintEnd_toEndOf="@id/start_states_heading"
+        app:layout_constraintHorizontal_bias="0"
+        android:layout_marginTop="20dp"
+        android:text="Deadlift (kg)"
+        android:textColor="@color/ssWhite"
+        android:textSize="20sp"
+        />
+
+    <EditText
+        android:id="@+id/start_states_deadlift_input"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/start_states_deadlift_label"
+        app:layout_constraintStart_toStartOf="@+id/start_states_heading"
+        app:layout_constraintEnd_toEndOf="@+id/start_states_heading"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/white_border"
+        android:hint="Deadlift"
+        android:shadowColor="@color/ssBlack"
+        android:textColor="@color/ssBlack"
+        android:textAlignment="textStart"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        android:inputType="numberDecimal"
+        />
+
+    <TextView
+        android:id="@+id/start_states_ohp_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/start_states_deadlift_input"
+        app:layout_constraintStart_toStartOf="@id/start_states_heading"
+        app:layout_constraintEnd_toEndOf="@id/start_states_heading"
+        app:layout_constraintHorizontal_bias="0"
+        android:layout_marginTop="20dp"
+        android:text="Over Head Press (kg)"
+        android:textColor="@color/ssWhite"
+        android:textSize="20sp"
+        />
+
+    <EditText
+        android:id="@+id/start_states_ohp_input"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/start_states_ohp_label"
+        app:layout_constraintStart_toStartOf="@+id/start_states_heading"
+        app:layout_constraintEnd_toEndOf="@+id/start_states_heading"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/white_border"
+        android:hint="Deadlift"
+        android:shadowColor="@color/ssBlack"
+        android:textColor="@color/ssBlack"
+        android:textAlignment="textStart"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        android:inputType="numberDecimal"
+        />
+
+    <Button
+        android:id="@+id/start_states_ohp_submit_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/start_states_ohp_input"
+        app:layout_constraintStart_toStartOf="@id/start_states_heading"
+        app:layout_constraintEnd_toEndOf="@id/start_states_heading"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Submit"
+        android:textColor="@color/ssWhite"
+        android:textStyle="bold"
+        android:background="@drawable/white_border"
+        android:backgroundTint="@color/ssBrown"
+        android:textAllCaps="false"
+        />
+
+    <ProgressBar
+        android:id="@+id/start_states_ohp_submit_btn_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@+id/start_states_ohp_submit_btn"
+        app:layout_constraintEnd_toEndOf="@+id/start_states_ohp_submit_btn"
+        app:layout_constraintTop_toTopOf="@+id/start_states_ohp_submit_btn"
+        app:layout_constraintBottom_toBottomOf="@+id/start_states_ohp_submit_btn"
+        android:visibility="invisible"
+        android:backgroundTint="@color/ssBrown"
+        android:indeterminate="true"
+        android:indeterminateTintMode="src_atop"
+        android:indeterminateTint="@color/ssBrown"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
