--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
 
     <color name="ssBackgroundBlack">#04090f</color>
     <color name="ssGreen">#0CF032</color>
+    <color name="ssBrown">#a8834f</color>
 </resources>
