--- a/app/src/main/res/layout/activity_start_states.xml
+++ b/app/src/main/res/layout/activity_start_states.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:src="@mipmap/ic_log_in_bear"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -32,16 +32,50 @@
         app:layout_constraintTop_toBottomOf="@+id/start_states_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="Let gets your details"
+        android:text="Lets get your details"
         android:textColor="@color/ssWhite"
         android:textSize="30sp"
+        />
+
+    <TextView
+        android:id="@+id/start_states_user_name_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/start_states_heading"
+        app:layout_constraintStart_toStartOf="@+id/start_states_heading"
+        app:layout_constraintEnd_toEndOf="@+id/start_states_heading"
+        app:layout_constraintHorizontal_bias="0"
+        android:layout_marginTop="20dp"
+        android:text="Gym name"
+        android:textColor="@color/ssWhite"
+        android:textSize="20sp"
+        />
+
+    <EditText
+        android:id="@+id/start_states_user_name_input"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/start_states_user_name_label"
+        app:layout_constraintStart_toStartOf="@+id/start_states_heading"
+        app:layout_constraintEnd_toEndOf="@+id/start_states_heading"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/white_border"
+        android:hint="Gym name"
+        android:shadowColor="@color/ssBlack"
+        android:textColor="@color/ssBlack"
+        android:textAlignment="textStart"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        android:inputType="textPersonName"
         />
 
     <TextView
         android:id="@+id/start_states_bench_press_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/start_states_heading"
+        app:layout_constraintTop_toBottomOf="@+id/start_states_user_name_input"
         app:layout_constraintStart_toStartOf="@+id/start_states_heading"
         app:layout_constraintEnd_toEndOf="@+id/start_states_heading"
         app:layout_constraintHorizontal_bias="0"
