--- a/app/src/main/res/layout/fragment_fragment_tool_bar.xml
+++ b/app/src/main/res/layout/fragment_fragment_tool_bar.xml
@@ -1,14 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentToolBar">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".FragmentToolBar"
+    android:background="@color/ssBackgroundBlack">
 
-    <!-- TODO: Update blank fragment layout -->
+<ImageView
+    android:id="@+id/fragment_tool_bar_account_icon"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    app:layout_constraintTop_toTopOf="@+id/fragment_tool_bar_account_name"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintBottom_toBottomOf="@+id/fragment_tool_bar_account_strength_result"
+    app:layout_constraintEnd_toStartOf="@+id/fragment_tool_bar_account_name"
+    android:src="@mipmap/ic_log_in_bear"
+    app:layout_constraintDimensionRatio="1:1"
+    android:scaleType="centerCrop"
+    />
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/fragment_tool_bar_account_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/fragment_tool_bar_account_icon"
+        app:layout_constraintEnd_toEndOf="@+id/fragment_tool_bar_account_strength_label"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="20dp"
+        android:text="User name"
+        android:textSize="16sp"
+        android:textColor="@color/ssWhite"
+        />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/fragment_tool_bar_account_name_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_tool_bar_account_name"
+        app:layout_constraintStart_toStartOf="@+id/fragment_tool_bar_account_name"
+        app:layout_constraintEnd_toEndOf="@+id/fragment_tool_bar_account_name"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:text="Gareth"
+        android:textSize="16sp"
+        android:textColor="@color/ssWhite"
+        />
+
+    <TextView
+        android:id="@+id/fragment_tool_bar_account_strength_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/fragment_tool_bar_account_name"
+        app:layout_constraintStart_toEndOf="@+id/fragment_tool_bar_account_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Total Strength:"
+        android:textSize="16sp"
+        android:textColor="@color/ssWhite"
+        />
+
+    <TextView
+        android:id="@+id/fragment_tool_bar_account_strength_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_tool_bar_account_strength_label"
+        app:layout_constraintStart_toStartOf="@+id/fragment_tool_bar_account_strength_label"
+        app:layout_constraintEnd_toEndOf="@+id/fragment_tool_bar_account_strength_label"
+        app:layout_constraintBottom_toBottomOf="@id/fragment_tool_bar_account_icon"
+        android:text="1000"
+        android:textSize="18sp"
+        android:textColor="@color/ssWhite"
+        />
+
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
