--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,21 +14,25 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/btn"
+        app:layout_constraintBottom_toTopOf="@+id/fragment6"
         tools:layout="@layout/fragment_fragment_tool_bar"
         app:layout_constraintVertical_weight="0.1"
         />
 
-    <View
-        android:id="@+id/btn"
+
+    <fragment
+        android:id="@+id/fragment6"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:name="com.example.myandroidappandroidapp.gsanastrengthandsizeapp.FragmentStrengthLeagueResults"
         app:layout_constraintTop_toBottomOf="@id/fragment5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/ssWhite"
+        tools:layout="@layout/fragment_fragment_strength_league_results"
         app:layout_constraintVertical_weight="0.9"
-      />
+        />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
