button to join league

--- a/app/src/main/res/layout/fragment_fragment_strength_league_results.xml
+++ b/app/src/main/res/layout/fragment_fragment_strength_league_results.xml
@@ -14,11 +14,29 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/fragment_strength_league_results_join_league_btn"
         android:text="Create a League"
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/white_border"
+        android:backgroundTint="@color/ssWhite"
+        android:textColor="@color/ssBackgroundBlack"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        />
+
+    <Button
+        android:id="@+id/fragment_strength_league_results_join_league_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/fragment_strength_league_results_create_league_btn"
+        app:layout_constraintTop_toTopOf="@+id/fragment_strength_league_results_create_league_btn"
+        app:layout_constraintBottom_toBottomOf="@+id/fragment_strength_league_results_create_league_btn"
         android:layout_marginEnd="20dp"
+        android:text="Join a league"
         android:background="@drawable/white_border"
         android:backgroundTint="@color/ssWhite"
         android:textColor="@color/ssBackgroundBlack"
