--- a/app/src/main/res/layout/fragment_fragment_strength_league_results.xml
+++ b/app/src/main/res/layout/fragment_fragment_strength_league_results.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".FragmentStrengthLeagueResults"
+    tools:context=".FragmentStrengthLeagues"
     android:background="@color/ssBrown">
 
     <!-- TODO: Update blank fragment layout -->
