--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,17 +4,279 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActivityProfile">
+    tools:context=".ActivityProfile"
+    android:background="@color/ssBackgroundBlack"
+    >
 
-    <TextView
-        android:id="@+id/hey"
+
+    <ImageView
+        android:id="@+id/profile_image_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        android:src="@mipmap/ic_log_in_bear"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintDimensionRatio="1:1"
+        android:scaleType="fitCenter"
+        android:background="@color/ssBackgroundBlack"
+        android:contentDescription="@string/app_name"
+        />
+
+    <TextView
+        android:id="@+id/profile_heading"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/profile_image_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Profile"
+        android:textColor="@color/ssWhite"
+        android:textSize="30sp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:textAlignment="center"
+        />
+
+    <TextView
+        android:id="@+id/profile_sub_heading_gym_name_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/profile_heading"
+        app:layout_constraintStart_toStartOf="@+id/profile_heading"
+        app:layout_constraintEnd_toEndOf="@+id/profile_heading"
+        app:layout_constraintHorizontal_bias="0"
+        android:layout_marginTop="20dp"
+        android:text="Gym name"
+        android:textColor="@color/ssWhite"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        />
+
+    <EditText
+        android:id="@+id/profile_sub_heading_gym_name_input"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/profile_sub_heading_gym_name_label"
+        app:layout_constraintStart_toStartOf="@+id/profile_heading"
+        app:layout_constraintEnd_toEndOf="@+id/profile_heading"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/white_border"
+        android:hint="Gym name"
+        android:shadowColor="@color/ssBlack"
+        android:textColor="@color/ssBlack"
+        android:textAlignment="textStart"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        android:inputType="textPersonName"
+        />
+
+    <TextView
+        android:id="@+id/profile_sub_heading_bench_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/profile_sub_heading_gym_name_input"
+        app:layout_constraintStart_toStartOf="@+id/profile_heading"
+        app:layout_constraintEnd_toEndOf="@+id/profile_heading"
+        app:layout_constraintHorizontal_bias="0"
+        android:layout_marginTop="20dp"
+        android:text="Bench press (kg)"
+        android:textColor="@color/ssWhite"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        />
+    <EditText
+        android:id="@+id/profile_sub_heading_bench_input"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/profile_sub_heading_bench_label"
+        app:layout_constraintStart_toStartOf="@+id/profile_heading"
+        app:layout_constraintEnd_toEndOf="@+id/profile_heading"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/white_border"
+        android:hint="Bench press"
+        android:shadowColor="@color/ssBlack"
+        android:textColor="@color/ssBlack"
+        android:textAlignment="textStart"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        android:inputType="numberDecimal"
+        />
+
+    <TextView
+        android:id="@+id/profile_sub_heading_squat_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/profile_sub_heading_bench_input"
+        app:layout_constraintStart_toStartOf="@id/profile_heading"
+        app:layout_constraintEnd_toEndOf="@id/profile_heading"
+        app:layout_constraintHorizontal_bias="0"
+        android:layout_marginTop="20dp"
+        android:text="Squat (kg)"
+        android:textColor="@color/ssWhite"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        />
+
+    <EditText
+        android:id="@+id/profile_sub_heading_squat_input"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/profile_sub_heading_squat_label"
+        app:layout_constraintStart_toStartOf="@+id/profile_heading"
+        app:layout_constraintEnd_toEndOf="@+id/profile_heading"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/white_border"
+        android:hint="Squat"
+        android:shadowColor="@color/ssBlack"
+        android:textColor="@color/ssBlack"
+        android:textAlignment="textStart"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        android:inputType="numberDecimal"
+        />
+
+    <TextView
+        android:id="@+id/profile_sub_heading_deadlift_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/profile_sub_heading_squat_input"
+        app:layout_constraintStart_toStartOf="@id/profile_heading"
+        app:layout_constraintEnd_toEndOf="@id/profile_heading"
+        app:layout_constraintHorizontal_bias="0"
+        android:layout_marginTop="20dp"
+        android:text="Deadlift (kg)"
+        android:textColor="@color/ssWhite"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        />
+
+    <EditText
+        android:id="@+id/profile_sub_heading_deadlift_input"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/profile_sub_heading_deadlift_label"
+        app:layout_constraintStart_toStartOf="@+id/profile_heading"
+        app:layout_constraintEnd_toEndOf="@+id/profile_heading"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/white_border"
+        android:hint="Deadlift"
+        android:shadowColor="@color/ssBlack"
+        android:textColor="@color/ssBlack"
+        android:textAlignment="textStart"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        android:inputType="numberDecimal"
+        />
+
+    <TextView
+        android:id="@+id/profile_sub_heading_ohp_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/profile_sub_heading_deadlift_input"
+        app:layout_constraintStart_toStartOf="@id/profile_heading"
+        app:layout_constraintEnd_toEndOf="@id/profile_heading"
+        app:layout_constraintHorizontal_bias="0"
+        android:layout_marginTop="20dp"
+        android:text="Over Head Press (kg)"
+        android:textColor="@color/ssWhite"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        />
+
+    <EditText
+        android:id="@+id/profile_sub_heading_ohp_input"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/profile_sub_heading_ohp_label"
+        app:layout_constraintStart_toStartOf="@+id/profile_heading"
+        app:layout_constraintEnd_toEndOf="@+id/profile_heading"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/white_border"
+        android:hint="Deadlift"
+        android:shadowColor="@color/ssBlack"
+        android:textColor="@color/ssBlack"
+        android:textAlignment="textStart"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        android:inputType="numberDecimal"
+        />
+
+    <Button
+        android:id="@+id/profile_save_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/profile_sub_heading_ohp_input"
+        app:layout_constraintStart_toStartOf="@id/profile_heading"
+        app:layout_constraintEnd_toStartOf="@+id/profile_sign_out_btn"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="hello"
+        android:layout_marginEnd="10dp"
+        android:text="Submit"
+        android:textColor="@color/ssWhite"
+        android:textStyle="bold"
+        android:background="@drawable/white_border"
+        android:backgroundTint="@color/ssBrown"
+        android:textAllCaps="false"
+        />
+
+    <ProgressBar
+        android:id="@+id/profile_save_btn_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@+id/profile_save_btn"
+        app:layout_constraintEnd_toEndOf="@+id/profile_save_btn"
+        app:layout_constraintTop_toTopOf="@+id/profile_save_btn"
+        app:layout_constraintBottom_toBottomOf="@+id/profile_save_btn"
+        android:visibility="invisible"
+        android:backgroundTint="@color/ssBrown"
+        android:indeterminate="true"
+        android:indeterminateTintMode="src_atop"
+        android:indeterminateTint="@color/ssBrown"
+        />
+    
+    <Button
+        android:id="@+id/profile_sign_out_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content" 
+        app:layout_constraintTop_toTopOf="@+id/profile_save_btn"
+        app:layout_constraintBottom_toBottomOf="@+id/profile_save_btn"
+        app:layout_constraintEnd_toEndOf="@id/profile_heading"
+        app:layout_constraintStart_toEndOf="@+id/profile_save_btn"
+        android:layout_marginStart="10dp"
+        android:text="Log out"
+        android:textColor="@color/ssWhite"
+        android:textStyle="bold"
+        android:background="@drawable/white_border"
+        android:backgroundTint="@color/ssBrown"
+        android:textAllCaps="false"
+        />
+
+    <ProgressBar
+        android:id="@+id/profile_sign_out_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@+id/profile_sign_out_btn"
+        app:layout_constraintEnd_toEndOf="@+id/profile_sign_out_btn"
+        app:layout_constraintTop_toTopOf="@+id/profile_sign_out_btn"
+        app:layout_constraintBottom_toBottomOf="@+id/profile_sign_out_btn"
+        android:visibility="invisible"
+        android:backgroundTint="@color/ssBrown"
+        android:indeterminate="true"
+        android:indeterminateTintMode="src_atop"
+        android:indeterminateTint="@color/ssBrown"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
